# legal-music

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FIRST_COMMITS.txt  MANIFEST.in  Makefile  README.md  README_AZ.md  REPO_DESCRIPTION.txt  REPO_METADATA.md  SECURITY.md  config.example.json  install.ps1  install.sh  legal-music-bot.service  music-start  music-stop  pyproject.toml  requirements.txt  ruff.toml  run_playlists.sh  songs.example.txt  start_bot.sh  telegram_bot.py
.github/workflows/: ci.yml  release.yml
playlists/: example.txt
playlists/my_playlists/: 01_deep_focus_songs.txt  02_office_energy_songs.txt  03_night_coding_songs.txt  04_rap_flow_songs.txt  05_oldschool_mood_songs.txt  06_emotional_eurasia_songs.txt
scripts/: install_dev.sh  install_pipx.sh  run_all_playlists.sh  run_playlist.sh  run_playlists.sh  uninstall.sh
src/legal_music/: __init__.py  async_engine.py  cli.py  config.py  constants.py  db_cache.py  downloader.py  logging_utils.py  models.py  playlist.py  reports.py  utils.py  validator.py
src/legal_music/search/: __init__.py  backends.py  base.py  engine.py  filters.py  health.py  profile.py  queries.py  scoring.py
src/legal_music/search/sources/: __init__.py  archive.py  bandcamp.py  ccmixter.py  fma.py  incompetech.py  jamendo.py  pixabay.py  ytdlp_source.py
tests/: test_cli.py  test_cli_smoke.py  test_config.py  test_engine.py  test_filters.py  test_profile.py  test_queries.py  test_scoring.py  test_utils.py  test_version.py
