[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-music"
version = "1.2.0"
description = "Professional CLI for checking music only on allowed sources"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "OpenAI"}
]
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "openpyxl>=3.1.0",
]

[project.scripts]
legal-music = "legal_music.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
